Refactor Mapping and Refactor Service code